# cs2-battle-bot-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  request.http
.github/workflows/: docker.yml  generate-schema.yml  test.yml
accounts/: schemas.py  urls.py  views.py
cs2_battle_bot/: settings.py  urls.py
discord_cs2_mm/: asgi.py  settings.py  urls.py  wsgi.py
matches/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
matches/fixtures/: maps.json
matches/migrations/: 0003_map_remove_match_teams_match_team1_match_team2_and_more.py  0006_alter_match_status_matchmapban_match_map_bans.py  0010_match_message_id.py  0014_match_clinch_series_match_cvars_match_map_sides_and_more.py
nginx/: Dockerfile
players/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
players/migrations/: 0004_alter_team_leader.py  0004_alter_team_leader_alter_team_name.py
scripts/: install.sh  migration.sh  uninstall.sh
servers/: admin.py  models.py
src/: install.sh  openapi.json  pyproject.toml
src/accounts/: auth.py  models.py  serializers.py  views.py
src/api/: urls.py
src/cs2_battle_bot/: settings.py  test_settings.py  urls.py
src/guilds/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/matches/: admin.py  models.py  permissions.py  serializers.py  utils.py  validators.py  views.py
src/players/: models.py  serializers.py  urls.py  views.py
src/servers/: admin.py  models.py  serializers.py  urls.py  views.py
(+65 files in other folders)
